--- a/flumotion-flashmedia.spec.in
+++ b/flumotion-flashmedia.spec.in
@@ -11,6 +11,9 @@ BuildRoot:      %{_tmppath}/%{name}-%{version}-%{release}-root
 
 Requires:	flumotion >= @FLU_REQ@
 Requires:	flvlib >= 0.1.5
+Requires:	flvlib >= 0.1.5
+Requires:	python-rtmpy
+Requires:	python-pyamf
 
 BuildRequires:	gettext
 BuildRequires:	python >= 2.3
