* Makefile.am: 	Add rpm creation rules to the makefile 	* configure.ac: 	* flumotion-flashmedia.spec.in: 	Sync with changes in flumotion at r8195
svn path=/flumotion-advanced/flumotion-flashmedia/trunk/; revision=27253

--- a/configure.ac
+++ b/configure.ac
@@ -1,7 +1,11 @@
-AC_INIT(README)
+AC_INIT(flumotion-flashmedia, 0.1.0.1,
+   https://code.area51.fluendo.com/private/trac/newticket?component=flumotion-flashmedia,
+   flumotion-flashmedia)
 
-AS_VERSION(flumotion-flashmedia, FW, 0, 1, 0, 1)
-AC_SUBST(RELEASE, $FW_RELEASE)
+AM_INIT_AUTOMAKE([-Wno-portability])
+
+AS_VERSION
+AS_NANO
 
 AC_SUBST_FILE(AUTHORS)
 AUTHORS=$srcdir/AUTHORS
