--- a/Makefile.am
+++ b/Makefile.am
@@ -5,6 +5,7 @@ ACLOCAL_AMFLAGS = -I common
 include $(srcdir)/common/common.mk
 include $(srcdir)/common/pychecker.mk
 include $(srcdir)/common/deb.mk
+include $(srcdir)/common/rpm.mk
 
 SUBDIRS = flumotion conf common misc
 
