* README: 	* flumotion/component/producers/fms/Makefile.am: 	* flumotion/component/producers/fms/admin_gtk.py: 	* flumotion/component/producers/fms/fms.glade: 	* flumotion/component/producers/fms/fms.py: 	* flumotion/component/producers/fms/fms.xml: 	Added two tabs to better debug the input connections to fms producer.
svn path=/flumotion-advanced/flumotion-flashmedia/trunk/; revision=49625

--- a/flumotion/component/producers/fms/Makefile.am
+++ b/flumotion/component/producers/fms/Makefile.am
@@ -1,9 +1,10 @@
 include $(top_srcdir)/common/python.mk
 
 componentdir = $(libdir)/flumotion/python/flumotion/component/producers/fms
-component_PYTHON = __init__.py fms.py live.py
+component_PYTHON = __init__.py fms.py live.py admin_gtk.py
 component_DATA = \
-	fms.xml
+	fms.xml  \
+        fms.glade
 
 clean-local:
 	rm -rf *.pyc *.pyo
