--- a/.gitignore
+++ b/.gitignore
@@ -82,12 +82,16 @@ flumotion/extern/fdpass/.deps/
 flumotion/extern/fdpass/fdpass.so
 flumotion/extern/fdpass/fdpass_so-fdpass.o
 flumotion/project/flumotion.locale.xml
+flumotion/project/flashmedia.py
+flumotion/test/setup.py
 misc/flumotion-verify-config
+misc/setup.py
 pkgconfig/flumotion-uninstalled.pc
 pkgconfig/flumotion.pc
 
 # Ignore po generated files
 po/Makefile.in.in
+po/Makefile.in.in~
 po/POTFILES
 po/Rules-quot
 po/boldquot.sed
